<resources>
    <string name="app_name">IM</string>
    <string name="frame_login_server_url">Server URL</string>
    <string name="frame_login_input_url">Url</string>
    <string name="frame_login_user_name">User Name</string>
    <string name="frame_login_input_name">Nickname</string>
    <string name="frame_login_button_connect">CONNECT</string>
    <string name="frame_room_button_chat_send">SEND</string>
    <string name="frame_room_input_chat">Input your message here</string>
    <string name="activity_room_file_not_support">[File] %1$s(%2$s) \nDownload files in Android is not supported yet.</string>
    <string name="activity_room_version_warning">The server runs on version "%1$s", while your client runs on version "%2$s".\n The two versions are compatible with each other, you may continue use this client.\n Do you want to download new version?</string>
    <string name="activity_room_version_error">The server runs on version %1$s, while your client runs on version %2$s.\n The two versions are not compatible with each other.\n Do you want to download a new version?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="activity_room_image_download_failed">Send a image, but we failed to download that image.</string>
    <string name="frame_room_button_image_send">IMAGE</string>
    <string name="frame_room_image_no_permission">You blocked us from reading your files. You should allow us so that we can send images.</string>
    <string name="frame_room_cannot_resolve_image">[Image] Unable to resolve image.</string>
    <string name="frame_room_file_download_progress">Downloading:  %2$s/%3$s</string>
    <string name="frame_room_file_download_start">Starting to download…</string>
    <string name="frame_room_file_download_succeed">Downloaded</string>
    <string name="frame_room_file_download_failed">File download failed: %1$s</string>
    <string name="frame_room_button_download">DOWNLOAD</string>
    <string name="frame_room_button_open">OPEN</string>
    <string name="frame_room_button_file_send">FILE</string>
    <string name="activity_room_cannot_open_file">Can not find a proper way to open the file.</string>
    <string name="frame_login_download_other_version">Download other version</string>
    <string name="frame_room_connecting_to_server">Please wait while connecting to the server…</string>
    <string name="frame_room_file_upload_progress">Uploading: %1$s</string>
    <string name="frame_room_file_upload_start">Starting to upload: %1$s</string>
    <string name="frame_room_file_upload_failed">Failed to upload : %1$s</string>
    <string name="frame_room_file_upload_succeed">File \"%1$s\" has been uploaded.</string>
    <string name="activity_room_version_unrecognizable">Unable to get the version of the server.\n Your client cannot connect to this server.\n Do you want to download a new version?</string>
    <string name="frame_room_systeminfo_userlist">Users in this chatroom:</string>
    <string name="frame_room_systeminfo_userjoin">%1$s joined the chatroom</string>
    <string name="frame_room_systeminfo_userleft">%1$s left the room</string>
    <string name="frame_room_systeminfo_changename">%1$s changed name to %2$s</string>
    <string name="frame_room_external_storage_denied">Unable to read external storage.</string>
    <string name="frame_login_invalid_username">Username should be no longer than 20 characters.</string>
    <string name="frame_room_disconnected">Disconnected from the server.</string>
    <string name="frame_login_input_token">Password for Room</string>
    <string name="frame_login_room_password">Room Password</string>
    <string name="frame_room_exit_reason_invalid_token">Wrong password.</string>
    <string name="frame_login_downloaded_files">Downloaded Files</string>
    <string name="frame_filemanager_title">Downloaded Files</string>
    <string name="frame_filemanager_button_open">OPEN</string>
    <string name="frame_filemanager_button_delete">DELETE</string>
    <string name="frame_filemanager_button_refresh">Refresh</string>
    <string name="frame_filemanager_button_clear">Delete All Files</string>
    <string name="frame_login_core_version">IM Core Version: %1$s</string>
    <string name="frame_login_apk_version">APK version: %1$s</string>
    <string name="time_morning">Morning</string>
    <string name="time_noon">Noon</string>
    <string name="time_afternoon">Afternoon</string>
    <string name="time_night">Night</string>
    <string name="time_midnight">Midnight</string>
    <string name="time_today">%6$d:%7$02d %2$s</string>
    <string name="time_yesterday">Yesterday %6$d:%7$02d %2$s</string>
    <string name="time_last_week">%8$s %6$d:%7$02d %2$s</string>
    <string name="time_this_year">%4$d/%5$d/%3$d %6$d:%7$02d %2$s</string>
    <string name="time_default">%4$d/%5$d/%3$d %6$d:%7$02d %2$s</string>
    <string name="time_monday">Monday</string>
    <string name="time_tuesday">Tuesday</string>
    <string name="time_wednesday">Wednesday</string>
    <string name="time_thursday">Thursday</string>
    <string name="time_friday">Friday</string>
    <string name="time_saturday">Saturday</string>
    <string name="time_sunday">Sunday</string>
    <string name="time_dusk">Afternoon</string>
    <string name="frame_room_image_download_failed">[Image] Download failed: %1$s</string>
    <string name="frame_room_image_downloading">[Image] Downloading image.</string>
    <string name="frame_room_button_emoji_send">Emoji</string>
    <string name="popup_chat_image_open">Open</string>
    <string name="popup_chat_image_favorite">Add to favorite</string>
    <string name="frame_room_emoji_added">Emoji saved!</string>
    <string name="frame_login_invalid_port">Invalid Port</string>
    <string name="frame_login_invalid_url">Invalid URL</string>
    <string name="frame_room_exit_reason_client_exception">An error occurred on client.</string>
    <string name="frame_room_exit_reason_connecting_to_new_room">Connecting to new room.</string>
    <string name="frame_room_exit_reason_invalid_url">Server not found.</string>
    <string name="frame_room_exit_reason_package_decode_error">Network protocol error.</string>
    <string name="frame_room_exit_reason_unknown">Unknown error.</string>
    <string name="frame_room_no_emoji_found">You have no emoji right now.</string>
    <string name="frame_room_back_button" translatable="false"> <![CDATA[<]]> </string>
    <string name="frame_login_set_avatar">Avatar</string>
    <string name="frame_login_options">Options</string>
    <string name="frame_login_avatar_set_succeed">Avatar has been set!</string>
</resources>