<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityRoomRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/colorRoomBgr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/skin_header_bar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:id="@+id/spaceStatusBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceStatusBar">

            <TextView
                android:id="@+id/btnBack"
                style="@style/Theme.IM.RoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="7sp"
                android:text="@string/frame_room_back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8sp"
                android:orientation="horizontal"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintWidth_percent="0.7">

                <TextView
                    android:id="@+id/tvRoomName"
                    style="@style/Theme.IM.RoomTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    tools:text="Sort" />

                <TextView
                    android:id="@+id/tvRoomUserNum"
                    style="@style/Theme.IM.RoomTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="(233)" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonRoomToBottom"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bgr_newmessage"
        android:ellipsize="none"
        android:padding="0dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/swipeRefreshLayoutMessageArea"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="99+"
        tools:visibility="visible" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayoutMessageArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutChatInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMessageArea"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"></androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <LinearLayout
        android:id="@+id/linearLayoutChatInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="6dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtonBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/roomChatInputArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_weight="1"
            android:background="@drawable/bgr_inputarea"
            android:enabled="false"
            android:hint="@string/frame_room_input_chat"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxHeight="100sp"
            android:text="@string/frame_room_connecting_to_server"
            android:textColor="?attr/colorRoomInputAreaText"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="Input Area" />

        <Button
            android:id="@+id/buttonRoomChatSend"
            style="@style/Theme.IM.QQButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="3dp"
            android:enabled="false"
            android:text="@string/frame_room_button_chat_send"
            android:textSize="14sp"
            tools:enabled="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtonBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toTopOf="@+id/rvEmojiArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/buttonRoomImageSend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:src="@drawable/send_image_button"
            tools:enabled="true" />

        <ImageView
            android:id="@+id/buttonRoomFileSend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:src="@drawable/send_file_button" />

        <ImageView
            android:id="@+id/buttonRoomEmojiSend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:src="@drawable/send_emoji_button" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEmojiArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorRoomInputAreaBgr"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/spaceInputMethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="240sp"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <Space
        android:id="@+id/spaceInputMethod"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/spaceNavigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/spaceNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>